--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>My Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <script src="script.js"></script>
+      <section>
+        <h1>Hello World!</h1>
+      </section>
+      <script src="script.js"></script>
   </body>
 </html> 
+
