--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
   <head>
     <script src="https://kit.fontawesome.com/8cc4b96fb0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Jacob Harvey Bio</title>
+    <title>Jacob Harvey</title>
   </head>
   <body>
-      <section class="name">
-        <img src="Myself.jpg" alt="Me" class="name-img">
+      <div class="root">
+        <img src="Myself.jpg" alt="Me" class="root-img">
         <h1>About Me</h1>
           <p>My name is Jacob Harvey. I am 30 years old and currently I am enrolled in Flatiron school for the Software Development program.
             My classes start June 7th 2021 and I am ready to rock!
             I can't wait to go through this program and learn a lot about software development
             When I am not coding a love to snowboard, surf, read, game.</p>
-        <h5>Flatiron School Student</h5>
-        <ul>
-          <li><a target="_blank" href="https://github.com/Jacobharv00"><i class="fab fa-github-square"></i></a></li>
-          <li><a target="_blank" href="https://www.linkedin.com/in/jacob-harvey-896264211/"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href="mailto:jacobharv00@gmail.com"><i class="fas fa-envelope-square"></i></a></li>
-        </ul>
-      </section>
-      
-      <script src="script.js"></script>
+          <div>
+            <ul>
+              <li><a target="_blank" href="https://github.com/Jacobharv00"><i class="fab fa-github-square"></i></a></li>
+              <li><a target="_blank" href="https://www.linkedin.com/in/jacob-harvey-896264211/"><i class="fab fa-linkedin"></i></a></li>
+              <li><a href="mailto:jacobharv00@gmail.com"><i class="fas fa-envelope-square"></i></a></li>
+            </ul>
+          </div>
+          </div>
+    <script src="script.js"></script>
   </body>
 </html> 
 
