--- a/index.html
+++ b/index.html
@@ -4,24 +4,37 @@
     <script src="https://kit.fontawesome.com/8cc4b96fb0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Jacob Harvey</title>
+    <link href="/images/surf-icon-5.jpg" rel="icon">
   </head>
   <body>
       <div class="root">
-        <img src="Myself.jpg" alt="Me" class="root-img">
-        <h1>About Me</h1>
-          <p>My name is Jacob Harvey. I am 30 years old and currently I am enrolled in Flatiron school for the Software Development program.
-            My classes start June 7th 2021 and I am ready to rock!
-            I can't wait to go through this program and learn a lot about software development
-            When I am not coding a love to snowboard, surf, read, game.</p>
-          <div>
-            <ul>
-              <li><a target="_blank" href="https://github.com/Jacobharv00"><i class="fab fa-github-square"></i></a></li>
-              <li><a target="_blank" href="https://www.linkedin.com/in/jacob-harvey-896264211/"><i class="fab fa-linkedin"></i></a></li>
-              <li><a href="mailto:jacobharv00@gmail.com"><i class="fas fa-envelope-square"></i></a></li>
-            </ul>
-          </div>
-          </div>
+        <img src="/images/Myself.jpg" alt="Me" class="img-me">
+      <div class="container">
+        <h1 class="about">About Me</h1>
+        <p>My name is Jacob Harvey, I am 30 years old and currently enrolled in Flatiron School for the Software Development program.
+          My class starts June 7th 2021 and I am ready to rock!
+          I can't wait to go through this program and learn a lot about software development, and improve my skills.
+          When I am not coding, I love to snowboard, surf, read, game.</p>
+        </div>
+        <div class="icons">
+          <ul>
+            <h3>Stay In Touch</h3>
+            <li><a target="_blank" href="https://github.com/Jacobharv00" title="github"><i class="fab fa-github-square"></i></a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/jacob-harvey-896264211/" title="linkedin"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="mailto:jacobharv00@gmail.com" title="email"><i class="fas fa-envelope-square"></i></a></li>
+          </ul>
+        </div>
+        <div class="projects">
+          <h1>Projects</h1>
+          <a href="https://harvey-hangman.netlify.app">My Hangman Game</a>
+          <a href="https://harvey-notesapp.netlify.app">My Notes App</a>
+          <a href="https://harvey-todo-app.netlify.app">My Todo App</a>
+        </div>
+      </div>
     <script src="script.js"></script>
   </body>
 </html> 
+
+
+
 
