--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
         </div>
         <div class="projects">
           <h1>Projects</h1>
-          <a href="https://harvey-hangman.netlify.app">My Hangman Game</a>
-          <a href="https://harvey-notesapp.netlify.app">My Notes App</a>
-          <a href="https://harvey-todo-app.netlify.app">My Todo App</a>
+          <a target="_blank" href="https://harvey-hangman.netlify.app">My Hangman Game</a>
+          <a target="_blank" href="https://harvey-notesapp.netlify.app">My Notes App</a>
+          <a target="_blank" href="https://harvey-todo-app.netlify.app">My Todo App</a>
         </div>
       </div>
-    <script src="script.js"></script>
+      <button class="btn-toggle">Dark-Mode</button>
+      <script src="script.js"></script>
+    <noscript>You need to enable JavaScript to view the full website</noscript>
   </body>
 </html> 
 
