--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="color-scheme" content="dark light">
     <script src="https://kit.fontawesome.com/8cc4b96fb0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Jacob Harvey</title>
     <link href="/images/surf-icon-5.jpg" rel="icon">
   </head>
-  <body>
+  <body class="dark-theme || light-theme">
+    <button class="btn-toggle">Dark/Light</button>
       <div class="root">
         <img src="/images/Myself.jpg" alt="Me" class="img-me">
       <div class="container">
-        <h1 class="about">About Me</h1>
+        <h1 class="about"><strong>About Me</strong></h1>
         <p>My name is Jacob Harvey, I am 30 years old and currently enrolled in Flatiron School for the Software Development program.
           My class starts June 7th 2021 and I am ready to rock!
           I can't wait to go through this program and learn a lot about software development, and improve my skills.
@@ -31,7 +33,6 @@
           <a target="_blank" href="https://harvey-todo-app.netlify.app">My Todo App</a>
         </div>
       </div>
-      <button class="btn-toggle">Dark-Mode</button>
       <script src="script.js"></script>
     <noscript>You need to enable JavaScript to view the full website</noscript>
   </body>
