worked on main website & raptor site

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    </script>
     <meta name="color-scheme" content="dark light">
     <script src="https://kit.fontawesome.com/8cc4b96fb0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -10,6 +11,7 @@
   <body class="dark-theme || light-theme">
     <button class="btn-toggle">Dark/Light</button>
       <div class="root">
+        
         <img src="/images/Myself.jpg" alt="Me" class="img-me">
       <div class="container">
         <h1 class="about"><strong>About Me</strong></h1>
@@ -28,9 +30,10 @@
         </div>
         <div class="projects">
           <h1>Projects</h1>
-          <a target="_blank" href="https://harvey-hangman.netlify.app">My Hangman Game</a>
-          <a target="_blank" href="https://harvey-notesapp.netlify.app">My Notes App</a>
-          <a target="_blank" href="https://harvey-todo-app.netlify.app">My Todo App</a>
+          <a target="_blank" style="font-weight:bold" href="https://harvey-hangman.netlify.app">My Hangman Game</a>
+          <a target="_blank" style="font-weight:bold" href="https://harvey-notesapp.netlify.app">My Notes App</a>
+          <a target="_blank" style="font-weight:bold" href="https://harvey-todo-app.netlify.app">My Todo App</a>
+          <a class="myButton" target="_blank" style="font-weight:bold" href="Raptorize-Kit/index.html">Raptor</a>
         </div>
       </div>
       <script src="script.js"></script>
