--- a/Raptorize-Kit/index.html
+++ b/Raptorize-Kit/index.html
@@ -7,15 +7,12 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script>!window.jQuery && document.write('<script src="jquery-1.4.1.min.js"><\/script>')</script>
 	<script src="jquery.raptorize.1.0.js"></script>
-	<script type="text/javascript">
-		$(window).load(function() {
-			$('.button').raptorize();
-		});
-	</script>
+	<script>$(window).load(function() {$('.button').raptorize()})</script>
 </head>
 <body>
-	<div class="root">
+	<div class="container">
 		<a href="#" class="button">Hear Me Roar</a>
 	</div>
 </body>
 </html>
+
