--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
             <li><a href="mailto:jacobharv00@gmail.com" title="email"><i class="fas fa-envelope-square"></i></a></li>
           </ul>
         </div>
-        <div class="projects">
+          <div class="projects">
           <h1>Projects</h1>
           <a target="_blank" style="font-weight:bold" href="https://harvey-hangman.netlify.app">My Hangman Game</a>
           <a target="_blank" style="font-weight:bold" href="https://harvey-notesapp.netlify.app">My Notes App</a>
           <a target="_blank" style="font-weight:bold" href="https://harvey-todo-app.netlify.app">My Todo App</a>
           <a class="myButton" target="_blank" style="font-weight:bold" href="Raptorize-Kit/index.html">Raptor</a>
         </div>
+        <!--  Time Not Ready yet -->
+        <!-- <div class="Time">
+          <p>Current Date and Time Is: <span id="date-time">.</span></p>
+        </div> -->
       </div>
       <script src="script.js"></script>
     <noscript>You need to enable JavaScript to view the full website</noscript>
