--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     </script>
-    <meta name="color-scheme" content="dark light">
+    <meta name="color-scheme" content="dark light"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8"/>
     <script src="https://kit.fontawesome.com/8cc4b96fb0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Jacob Harvey</title>
@@ -33,11 +35,7 @@
           <a target="_blank" style="font-weight:bold" href="https://harvey-notesapp.netlify.app">My Notes App</a>
           <a target="_blank" style="font-weight:bold" href="https://harvey-todo-app.netlify.app">My Todo App</a>
           <a class="myButton" target="_blank" style="font-weight:bold" href="Raptorize-Kit/index.html">Raptor</a>
-        </div>
-        <!--  Time Not Ready yet -->
-        <!-- <div class="Time">
-          <p>Current Date and Time Is: <span id="date-time">.</span></p>
-        </div> -->
+          </div>
       </div>
       <script src="script.js"></script>
     <noscript>You need to enable JavaScript to view the full website</noscript>
