--- a/otherProject/index.html
+++ b/otherProject/index.html
@@ -7,8 +7,11 @@
     <title>Future Tech</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">    
 </head>
 <body>
+    <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar__container">
             <a href="/" id="navbar__logo"><i class="fas fa-user-astronaut"></i>Future </a>
@@ -33,6 +36,35 @@
             </ul>
         </div>
     </nav>
+    <!-- Hero Section -->
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>FUTURE GENERATION</h1>
+                <h2>TECHNOLOGY</h2>
+                <p>See what makes us different.</p>
+                <button class="main__btn"><a href="/">Get Started</a></button>
+            </div>
+            <div class="main__img--container">
+                <img src="/otherProject/images2/pic1.svg" alt="pic" id="main__img">
+            </div>
+        </div>
+    </div>
+    <!-- Services Section -->
+    <div class="services">
+        <h1>See what the hype is about</h1>
+        <div class="services__container">
+            <div class="services__card">
+                <h2>Experience Bliss</h2>
+                <p>AI Powered Technology</p>
+                <button>Get Started</button>
+            </div>
+            <div class="services__card">
+                <h2>Are you Ready?</h2>
+                <p>Take the leap</p>
+                <button>Get Started</button>
+            </div>
+        </div>
     <script src="app.js"></script>
 </body>
 </html>
