--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/8cc4b96fb0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Jacob Harvey</title>
-    <link href="/images/surf-icon-5.jpg" rel="icon">
+    <link href="http://domain.com/images/surf-icon-5.jpg" rel="icon">
   </head>
   <body class="dark-theme || light-theme">
     <button class="btn-toggle">Dark/Light</button>
