--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <script src="https://kit.fontawesome.com/8cc4b96fb0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Jacob Harvey</title>
-    <link href="https:///images/surf-icon-5.jpg" rel="icon">
+    <link href="/images/surf-icon-5.jpg" rel="icon">
   </head>
   <body class="dark-theme || light-theme">
     <button class="btn-toggle">Dark/Light</button>
       <div class="root">
-        <img class="img-me" src="/images/Myself.jpg" alt="Me"/>
+        <img class="img-me" src="https:///images/Myself.jpg" alt="Not Me"/>
       <div class="container">
         <h1 class="about"><strong>About Me</strong></h1>
         <p>My name is Jacob Harvey, I am 30 years old and currently enrolled in Flatiron School for the Software Development program.
