finished basics of future website

--- a/otherProject/future.html
+++ b/otherProject/future.html
@@ -40,13 +40,13 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>THIS IS THE TECH PAGE</h1>
+                <h1>FUTURE GENERATION</h1>
                 <h2>TECHNOLOGY</h2>
                 <p>See what makes us the future.</p>
                 <button class="main__btn"><a href="/">Get Started</a></button>
             </div>
             <div class="main__img--container">
-                <img src="/otherProject/images2/pic4.jpg" alt="pic" id="main__img">
+                <img src="/otherProject/images2/pic1.svg" alt="pic" id="main__img">
             </div>
         </div>
     </div>
@@ -124,6 +124,3 @@
     <script src="app.js"></script>
 </body>
 </html>
-
-
-
