--- a/Raptorize-Kit/index.html
+++ b/Raptorize-Kit/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="style.css">
 	<meta charset="utf-8" />
 	<title>Raptor</title>
+	<link href="raptor.png" rel="icon">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script>!window.jQuery && document.write('<script src="jquery-1.4.1.min.js"><\/script>')</script>
 	<script src="jquery.raptorize.1.0.js"></script>
