--- a/Raptorize-Kit/index.html
+++ b/Raptorize-Kit/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
-	<meta charset="utf-8" />
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Raptor</title>
 	<link href="raptor.png" rel="icon">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
@@ -11,8 +13,11 @@
 	<script>$(window).load(function() {$('.button').raptorize()})</script>
 </head>
 <body>
-	<a href="#" class="button">Hear Me Roar</a>
-	
+	<div class="root">
+		<div class="root__container">
+			<a href="/Raptorize-Kit/index.html" class="button">Hear Me Roar</a>
+		</div>
+	</div>
 </body>
 </html>
 
