--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <a target="_blank" style="font-weight:bold" href="https://harvey-notesapp.netlify.app">My Notes App</a>
           <a target="_blank" style="font-weight:bold" href="https://harvey-todo-app.netlify.app">My Todo App</a>
           <a class="myButton" target="_blank" style="font-weight:bold" href="Raptorize-Kit/index.html">Raptor</a>
+          <a class="future" target="_blank" style="font-weight: bold;" href="/otherProject/future.html">Future</a>
           </div>
       </div>
       <script src="script.js"></script>
