finished 3D Welcome! box

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="dark-theme || light-theme">
     <button class="btn-toggle">Dark/Light</button>
       <div class="root">
-        <img class="img-me" src="/images/myself.jpg" alt="Not Me"/>
+        <img class="img-me" src="images/myself.jpg" alt="Not Me"/>
         <div class="container">
         <h1 class="about"><strong>About Me</strong></h1>
         <p>My name is Jacob Harvey, I am 30 years old and currently enrolled in Flatiron School for the Software Development program.
@@ -38,7 +38,16 @@
           <a class="future" target="_blank" style="font-weight: bold;" href="/otherProject/future.html">Future</a>
           </div>
       </div>
-      <script src="script.js"></script>
+          <!-- Tiltable 3D Element -->
+            <div class="box">
+              <h1>WELCOME!</h1>
+            <div class="circle">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+    <script src="script.js"></script>
     <noscript>You need to enable JavaScript to view the full website</noscript>
   </body>
 </html> 
