--- a/Raptorize-Kit/index.html
+++ b/Raptorize-Kit/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="root">
 		<div class="root__container">
-			<a href="/Raptorize-Kit/index.html" class="button">Hear Me Roar</a>
+			<a href="./Raptorize-Kit/index.html" class="button">Hear Me Roar</a>
 		</div>
 	</div>
 </body>
