--- a/Raptorize-Kit/index.html
+++ b/Raptorize-Kit/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Raptor</title>
 	<link href="raptor.png" rel="icon">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script>!window.jQuery && document.write('<script src="jquery-1.4.1.min.js"><\/script>')</script>
 	<script src="jquery.raptorize.1.0.js"></script>
 	<script>$(window).load(function() {$('.button').raptorize()})</script>
