git hub pages testing

--- a/otherProject/future.html
+++ b/otherProject/future.html
@@ -23,10 +23,10 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="otherProject/future.html" class="navbar__links">Home</a>
+                    <a href="/otherProject/future.html" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="otherProject/tech.html" class="navbar__links">Tech</a>
+                    <a href="/otherProject/tech.html" class="navbar__links">Tech</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/" class="navbar__links">Products</a>
