--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="dark-theme || light-theme">
     <button class="btn-toggle">Dark/Light</button>
       <div class="root">
-        <img class="img-me" src="images/myself.jpg" alt="Not Me"/>
+        <img class="img-me" src="/images/Myself.jpg" alt="Not Me"/>
         <div class="container">
         <h1 class="about"><strong>About Me</strong></h1>
         <p>My name is Jacob Harvey, I am 30 years old and currently enrolled in Flatiron School for the Software Development program.
