--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a target="_blank" style="font-weight:bold" href="https://harvey-notesapp.netlify.app">My Notes App</a>
             <a target="_blank" style="font-weight:bold" href="https://harvey-todo-app.netlify.app">My Todo App</a>
             <a class="myButton" target="_blank" style="font-weight:bold" href="Raptorize-Kit/index.html">Raptor</a>
-            <a class="future" target="_blank" style="font-weight: bold;" href="otherProject">Future</a>
+            <a class="future" target="_blank" style="font-weight: bold;" href="https://github.com/Jacobharv00/otherProject/future.html">Future</a>
           </div>
       </div>
           <!-- Tiltable 3D Element -->
