still need to fix paths

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <a target="_blank" style="font-weight:bold" href="https://harvey-hangman.netlify.app">My Hangman Game</a>
             <a target="_blank" style="font-weight:bold" href="https://harvey-notesapp.netlify.app">My Notes App</a>
             <a target="_blank" style="font-weight:bold" href="https://harvey-todo-app.netlify.app">My Todo App</a>
-            <a class="myButton" target="_blank" style="font-weight:bold" href="Raptorize-Kit/index.html">Raptor</a>
-            <a class="future" target="_blank" style="font-weight: bold;" href="https://github.com/Jacobharv00/otherProject/future.html">Future</a>
+            <a class="myButton" target="_blank" style="font-weight:bold" href="Raptorize-Kit/index.html">Raptor</a> 
+            <a class="future" target="_blank" style="font-weight: bold;" href="https://github.com/Jacobharv00/otherProject.git">Future</a> 
           </div>
       </div>
           <!-- Tiltable 3D Element -->
