still need to hook up future website

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <a target="_blank" style="font-weight:bold" href="https://harvey-hangman.netlify.app">My Hangman Game</a>
             <a target="_blank" style="font-weight:bold" href="https://harvey-notesapp.netlify.app">My Notes App</a>
             <a target="_blank" style="font-weight:bold" href="https://harvey-todo-app.netlify.app">My Todo App</a>
-            <a href="jacobharv-raptor.netlify.app" class="myButton" target="_blank" style="font-weight:bold">Raptor</a> 
-            <a href="jacobharv-future.netlify.app" class="future" target="_blank" style="font-weight: bold;">Future</a>
-            <a href="jacobharv-fun.netlify.app" class="fun" target="_blank" style="font-weight: bold;">Fun</a> 
+            <a href="https://jacobharv-raptor.netlify.app" class="myButton" target="_blank" style="font-weight:bold">Raptor</a> 
+            <a href="https://jacobharv-future.netlify.app" class="future" target="_blank" style="font-weight: bold;">Future</a>
+            <a href="https://jacobharv-fun.netlify.app" class="fun" target="_blank" style="font-weight: bold;">Fun</a> 
           </div>
       </div>
           <!-- Tiltable 3D Element -->
