updated about me section and added 2 projects and medium link

--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
   <body class="dark-theme || light-theme">
     <button class="btn-toggle">Dark/Light</button>
       <div class="root">
-        <img class="img-me" src="images/Myself.jpg" alt="Not Me">
+        <img class="img-me" src="images/Myself.jpg" alt="me">
         <div class="container">
         <h1 class="about"><strong>About Me</strong></h1>
-        <p>My name is Jacob Harvey, I am 30 years old and currently enrolled in Flatiron School for the Software Development program.
-          My class starts June 7th 2021 and I am ready to rock!
-          I can't wait to go through this program and learn a lot about software development, and improve my skills.
-          When I am not coding, I love to snowboard, surf, read, game.</p>
+        <p>Hello! My name is Jacob Harvey I just graduated Flatiron School for Software Engineering on 9/17/2021. I am really excited to continue my learning and hopefully soon be a valuable team member of an awesome company. I am experienced in Javascript, React, Ruby, and Ruby on Rails, with a background in commercial and residential landscape development. Previous supervisor and lead tester for a world class terrain park for the past 12 years. Strong skills in problem solving, critical thinking, team-building, and management. When I am not having a blast coding I love to surf, snowboarding, read, travel, expand my knowledge and skills.
+      </p>
         </div>
         <div class="icons">
           <ul>
@@ -27,6 +25,7 @@
             <li><a target="_blank" href="https://github.com/Jacobharv00" title="github"><i class="fab fa-github-square"></i></a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/jacob-harvey-896264211/" title="linkedin"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="mailto:jacobharv00@gmail.com" title="email"><i class="fas fa-envelope-square"></i></a></li>
+            <li><a target="_blank" href="https://jacobharv00.medium.com" title="medium"><i class="fab fa-medium"></i></a></li>
           </ul>
         </div>
           <div class="projects">
@@ -37,6 +36,8 @@
             <a href="https://jacobharv-raptor.netlify.app" class="myButton" target="_blank" style="font-weight:bold">Raptor</a> 
             <a href="https://jacobharv-future.netlify.app" class="future" target="_blank" style="font-weight: bold;">Future</a>
             <a href="https://jacobharv-fun.netlify.app" class="fun" target="_blank" style="font-weight: bold;">Fun</a> 
+            <a target="_blank" style="font-weight:bold" href="https://movie-lounge.netlify.app">Movie Lounge</a>
+            <a target="_blank" style="font-weight:bold" href="https://loungezilla.herokuapp.com">LOUNGEZILLA</a>
           </div>
       </div>
           <!-- Tiltable 3D Element -->
