--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </div>
         <div class="icons">
           <ul>
-            <h3>Stay In Touch</h3>
-            <li><a target="_blank" href="https://github.com/Jacobharv00" title="github"><i class="fab fa-github-square"></i></a></li>
-            <li><a target="_blank" href="https://www.linkedin.com/in/jacob-harvey-896264211/" title="linkedin"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="mailto:jacobharv00@gmail.com" title="email"><i class="fas fa-envelope-square"></i></a></li>
-            <li><a target="_blank" href="https://jacobharv00.medium.com" title="medium"><i class="fab fa-medium"></i></a></li>
+            <h3 class='stay-in-touch'>Stay In Touch</h3>
+            <li class='github-logo'><a target="_blank" href="https://github.com/Jacobharv00" title="github"><i class="fab fa-github-square"></i></a></li>
+            <li class='linked-logo'><a target="_blank" href="https://www.linkedin.com/in/jacob-harvey-896264211/" title="linkedin"><i class="fab fa-linkedin"></i></a></li>
+            <li class='mail-logo'><a href="mailto:jacobharv00@gmail.com" title="email"><i class="fas fa-envelope-square"></i></a></li>
+            <li class='medium-logo'><a target="_blank" href="https://jacobharv00.medium.com" title="medium"><i class="fab fa-medium"></i></a></li>
           </ul>
         </div>
           <div class="projects">
