updated about me section

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <img class="img-me" src="images/Myself.jpg" alt="me">
         <div class="container">
         <h1 class="about"><strong>About Me</strong></h1>
-        <p>Hello! My name is Jacob Harvey I just graduated Flatiron School for Software Engineering on 9/17/2021. I am really excited to continue my learning and hopefully soon be a valuable team member of an awesome company. I am experienced in Javascript, React, Ruby, and Ruby on Rails, with a background in commercial and residential landscape development. Previous supervisor and lead tester for a world class terrain park for the past 12 years. Strong skills in problem solving, critical thinking, team-building, and management. When I am not having a blast coding I love to surf, snowboarding, read, travel, expand my knowledge and skills.
-      </p>
+        <p> Hello, my name is Jacob Harvey and I am a Full-Stack Software Engineer. I spent the past 10+ years in the ski resort and landscape industry working for the same two companies. When I became intrigued by the software engineering work my best friend was doing and how she was able to build applications that help people and simplify everyday life, it made me realize I wanted to be a part of that and be someone that can help bring excitement and ease to peoples everyday life. I’d love to apply my manager/supervisor experience and the software engineering skill set I built at Flatiron School to help groundbreaking companies provide quality and unique products. </p>
         </div>
         <div class="icons">
           <ul>
