fix puncuation in about section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="img-me" src="images/Myself.jpg" alt="me">
         <div class="container">
         <h1 class="about"><strong>About Me</strong></h1>
-        <p> Hello, my name is Jacob Harvey and I am a Full-Stack Software Engineer. I spent the past 10+ years in the ski resort and landscape industry working for the same two companies. When I became intrigued by the software engineering work my best friend was doing and how she was able to build applications that help people and simplify everyday life, it made me realize I wanted to be a part of that and be someone that can help bring excitement and ease to peoples everyday life. I’d love to apply my manager/supervisor experience and the software engineering skill set I built at Flatiron School to help groundbreaking companies provide quality and unique products. </p>
+        <p> Hello, my name is Jacob Harvey and I am a Full-Stack Software Engineer. I spent the past 10+ years in the ski resort and landscape industry working for the same two companies. When I became intrigued by the software engineering work my best friend was doing and how she was able to build applications that help people and simplify everyday life, it made me realize I wanted to be a part of that and be someone that can help bring excitement and ease to people's everyday life. I’d love to apply my manager/supervisor experience and the software engineering skill set I built at Flatiron School to help groundbreaking companies provide quality and unique products. </p>
         </div>
         <div class="icons">
           <ul>
